RbA Build/src/objects/rSuite_Managed_Documents__c.object
<CustomObject>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>The name of the file generated by rSuite</description>
        <inlineHelpText>Enter the name of the file to be generated (e.g. Lead-safe Work Practices.pdf)</inlineHelpText>
        <label>File Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Updated_On__c</fullName>
        <label>Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rSuite_Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>rSuite Configuration</label>
        <referenceTo>rSuite_Configuration__c</referenceTo>
        <relationshipLabel>rSuite Managed Documents</relationshipLabel>
        <relationshipName>rSuie_Managed_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>rSuite Managed Documents</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>rSuite Managed Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>